Making edits with review (#10)
* refactor: getEnabled -> isEnabled in notification entitity, fixed names in keyboard buttons

* refactor: rewrited CommandHandler

* refactor: rewrited bot to execute BotApiMethods, not only SendMessage Method

* refactor: rewrited utils classes, rewrited messageConstants

* feat: added docker support for bot

* refactor: writed review fixes, added simple docker file

* feat: updated ignore file